test/indexOutOfBounds10.slq

def main(){
	x:=vector(3,0:ğ”¹);
	H(x[-1]):=H(x[-1]); // error
}
